--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,13 +2,13 @@ spring.application.name=easy-tagalog-backend
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/easytagalog
 spring.datasource.username=postgres
-spring.datasource.password=password123
+spring.datasource.password=15%Br0n1E$1kC
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
-spring.security.user.name=kaloua
-spring.security.user.password=password123
+#spring.security.user.name=kaloua
+#spring.security.user.password=password123
 
 server.servlet.session.cookie.same-site=strict
