--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=easy-tagalog-backend
 
-spring.config.import=env.properties
+spring.config.import=file:.env.properties
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/${DB_NAME}
 spring.datasource.username=${DB_USER}
